demo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-dpl
spec:
  replicas: 4
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: 69966/earthdx:78
        ports:
        - containerPort: 80
