demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations: 
  # used certmanager with letencrypt to request certificates 
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  # cerficate is for below domain name 
  tls: 
    - hosts:
        - react-k8s-demo.bluenodeops.online
      secretName: nginx-k8s-demo-secret 
  rules:
  - host: react-k8s-demo.bluenodeops.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react-svc
            port: 
              number: 80
